--- a/katalog/katalog.scss
+++ b/katalog/katalog.scss
@@ -19,7 +19,7 @@ main{
     }
     &-row{
         @extend %d-row;
-        p{
+        p, label{
             font-weight: 900;
             font-size: calcFluid(12, 18, 320, 1920);
             span{
@@ -30,15 +30,20 @@ main{
                 color: #5134c4;
             }
         }
-        .katalog__open{
+        #firstFilter{
             margin: 0;
-            font-size: calcFluid(20, 30, 320, 1920);
+            font-size: calcFluid(12, 18, 320, 1920);
             background:$gradient;
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
             color: #5134c4;
-            transform: rotate(90deg);
+            border: none;
+            outline: none;
+            appearance: none;
+            &::after{
+                border: 0px solid  #000;
+            }
         }
         .filter__open{
             cursor: pointer;
@@ -83,32 +88,87 @@ main{
                     font-size: 18px;
                 }
             }
-            input[type='range'] {
-                margin: 20px 0 0 0;
-                -webkit-appearance: none !important;
-                background: $gradient;
-                height:5px;
+            .katalog__size{
+                @extend %d-col;
+                &Item{
+                    margin: 10px 0;
+                }
             }
-            input[type='range']::-webkit-slider-thumb {
-                -webkit-appearance: none !important;
-                border-radius: 50%;
-                background:$gradient;
-                height:15px;
-                width:15px;
+            .container{
+                position: relative;
+                width: 100%;
+                height: 60px;
+                input[type="range"]{
+                    -webkit-appearance: none;
+                    -moz-appearance: none;
+                    appearance: none;
+                    width: 100%;
+                    outline: none;
+                    position: absolute;
+                    margin: auto;
+                    top: 0;
+                    bottom: 0;
+                    background-color: transparent;
+                    pointer-events: none;
+                }
+                .slider-track{
+                    width: 100%;
+                    height: 5px;
+                    position: absolute;
+                    margin: auto;
+                    top: 0;
+                    bottom: 0;
+                    border-radius: 5px;
+                }
+                input[type="range"]::-webkit-slider-runnable-track{
+                    -webkit-appearance: none;
+                    height: 5px;
+                }
+                input[type="range"]::-webkit-slider-thumb{
+                    -webkit-appearance: none;
+                    height: 1.7em;
+                    width: 1.7em;
+                    background: $gradient;
+                    cursor: pointer;
+                    margin-top: -9px;
+                    pointer-events: auto;
+                    border-radius: 50%;
+                }
             }
             input[type='checkbox'] {
                 margin: auto 10px auto 0;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
                 display: inline-block;
                 width: 1.5em;
                 height:1.5em;
                 border: 1px solid #adb5bd;
+                cursor: pointer;
+                vertical-align:bottom;
                 &:checked{
-                   background-color: #5134c4;
+                   background: $gradient;
                 }
             }
+              
+              input[type="checkbox"]:after {
+                content: ' ';
+                position: relative;
+                left: 35%;
+                top: 10%;
+                width: 15%;
+                height: 50%;
+                border: solid #fff;
+                border-width: 0 3px 3px 0;
+                transform: rotate(50deg);
+                display: none;
+              }
+              
+              input[type="checkbox"]:checked:after {
+                display: block;
+              }
             #clear{
                 @extend %more;
-                margin: 0;
             }
 
         }
