--- a/aboutUs/aboutUs.scss
+++ b/aboutUs/aboutUs.scss
@@ -104,7 +104,7 @@ main{
                 width: 100%;
                 margin: 20px 0 0 0;
                 img{
-                    content: url("./GroupMedia.webp");
+                    content: url("./GroupMedia.svg");
                     width: 95%;
                 }
             }
@@ -115,7 +115,7 @@ main{
                     margin: 10px calcFluid(50, 135, 320, 1000);
                 }
                 img:nth-child(2){
-                    content: url("./GroupMedia.webp");
+                    content: url("./GroupMedia.svg");
                     width: 97%;
                     height: 100%;
                 }
