--- a/header/header.css
+++ b/header/header.css
@@ -269,7 +269,7 @@ header .services .sidebar__menu a:not(:first-child):hover {
 header .services__fixed {
   border-bottom: 1px solid #ececec;
   position: fixed;
-  width: calc( 0.625 * 100vw + 100px );
+  width: calc( 0.6375 * 100vw + 96px );
   padding: 0 calc( 0.18125 * 100vw + -48px );
   top: 0;
   left: 0;
@@ -281,7 +281,7 @@ header .services__fixed a {
 header .services__fixed a:not(:first-child):hover {
   margin: 15px 0 25px 40px;
 }
-header .services__fixed a:last-child:hover {
+header .services__fixed a:not(:first-child):hover:nth-child(6) {
   margin: 15px 0 25px auto;
 }
 
@@ -299,9 +299,10 @@ header .services a:nth-child(5) {
     display: none;
   }
   header .services__media {
+    margin: auto 20px;
     display: block;
     max-width: 100%;
-    max-height: 100%;
+    height: 100%;
   }
   header .services .sidebar__open {
     display: flex;
